--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=61.0", "wheel"]
+requires = ["setuptools>=61.0", "wheel", "setuptools_scm>=8.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "figchain"
-version = "0.1.0"
+dynamic = ["version"]
 description = "FigChain Python Client"
 readme = "README.md"
 authors = [{ name = "FigChain Team", email = "support@figchain.io" }]
@@ -37,3 +37,8 @@ where = ["src"]
 [tool.setuptools.package-data]
 figchain = ["*.avsc"]
 
+
+[tool.setuptools_scm]
+version_scheme = "post-release"
+local_scheme = "dirty-tag"
+write_to = "src/figchain/version.py"
