Ignore version.py and enforce no-local-version for PyPI compat

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,5 +40,5 @@ figchain = ["*.avsc"]
 
 [tool.setuptools_scm]
 version_scheme = "post-release"
-local_scheme = "dirty-tag"
+local_scheme = "no-local-version"
 write_to = "src/figchain/version.py"
