--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,9 @@ dependencies = [
     "requests>=2.25.0",
     "avro>=1.11.0",
     "typing-extensions>=4.0.0",
+    "boto3>=1.20.0",
+    "cryptography>=3.0.0",
+    "pyyaml>=6.0",
 ]
 requires-python = ">=3.7"
 
