--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "typing-extensions>=4.0.0",
     "boto3>=1.20.0",
     "cryptography>=3.0.0",
+    "pyjwt>=2.0.0",
     "pyyaml>=6.0",
 ]
 requires-python = ">=3.7"
