--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,9 @@ requires-python = ">=3.7"
 dev = [
     "pytest",
     "pylint",
-    "mypy",
     "black",
+    "ruff",
+    "pre-commit",
     "avro-gen3",
 ]
 
@@ -45,3 +46,14 @@ figchain = ["*.avsc"]
 [tool.setuptools_scm]
 write_to = "src/figchain/version.py"
 local_scheme = "no-local-version"
+
+[tool.black]
+line-length = 88
+target-version = ['py38']
+
+[tool.ruff]
+line-length = 88
+target-version = 'py38'
+
+[tool.ruff.lint]
+ignore = ['E203']
